--- a/index.html
+++ b/index.html
@@ -26,12 +26,10 @@
       <li class="list-group-item">Item 2</li>
       <li class="list-group-item">Item 3</li>
       <li class="list-group-item">Item 4</li>
-      <li class="without-class">Item 5</li>
     </ul>
+    <p>hello</p>
    </div>
   </div>
-
-  <script src="dom.js" ></script>
-
+  <script src="dom.js"></script>
 </body>
 </html>
