--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <ul id="items">
 
   </ul>
+  <div id="warning"></div>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="main.js"></script>
+  
 </body>
 </html>
