--- a/expense-tracker-full-stack/public/login.html
+++ b/expense-tracker-full-stack/public/login.html
@@ -50,7 +50,7 @@
         formEl.addEventListener('submit', (e) => {
             e.preventDefault();
 
-            axios.post('http://43.207.195.127:3000/user/login', document.querySelector('#login-form'), {
+            axios.post('http://localhost:80/user/login', document.querySelector('#login-form'), {
                 headers: {
                     'Content-Type': 'application/json'
                 }
@@ -58,7 +58,7 @@
             .then(res => {
                 alert(res.data.message);
                 localStorage.setItem('token', res.data.token);
-                window.location.href = 'http://43.207.195.127:3000/user/daily-expenses';
+                window.location.href = 'http://localhost:80/user/daily-expenses';
             })
             .catch(err => {
                 alert(err.response.data.error);
